<resources>
    <string name="app_name">Jochens Next Dinner</string>

    <string name="navigate_to_cant_eat_screen">navigate to Can\'t Eat Screen</string>
    <string name="cant_eat_screen">Canteats</string>
    <string name="navigate_to_like_screen">navigate to Like Screen</string>
    <string name="like_screen">Likes</string>
    <string name="navigate_to_recipe_screen">navigate to Recipe Screen</string>
    <string name="recipe_screen">Recipes</string>
    <string name="navigate_to_start_screen">navigate to Start Screen</string>
    <string name="navigate_up">navigate up</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="no_recipes_found">No recipes found</string>
    <string name="add_button">Add button</string>
    <string name="try_again">Try Again</string>
    <string name="home_nav_name">Home</string>
    <string name="wat_mag_je_niet_eten">Wat mag je niet eten?</string>
    <string name="wat_mag_je_dan_wel_eten">Wat mag je dan wel eten?</string>
    <string name="wat_maak_jij_dan_zoal">Wat maak jij dan zoal?</string>
    <string name="start">Start</string>
</resources>
